--- a/.github/workflows/fly-deploy.yml
+++ b/.github/workflows/fly-deploy.yml
@@ -3,6 +3,33 @@ name: Deploy to Fly.io
 on:
   push:
     branches: ["main"]
+  workflow_dispatch: {}
+
+concurrency:
+  group: fly-deploy-${{ github.ref }}
+  cancel-in-progress: true
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    env:
+      FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Flyctl
+        uses: superfly/flyctl-actions/setup-flyctl@v1.5
+
+      - name: Deploy
+        run: flyctl deploy --remote-only --app live-debate-transcriber
+name: Deploy to Fly.io
+
+on:
+  push:
+    branches: ["main"]
   workflow_dispatch:
 
 jobs:
